Closed Bug 1707605 Opened 4 years ago Closed 4 years ago

[Proton] Elastic overscroll animation gets stuck upon clicking on the blank space from a previous banner/interactable section

Categories

(Core :: Panning and Zooming, defect)

Desktop
macOS
defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox88 --- disabled
firefox89 --- wontfix
firefox90 --- verified

People

(Reporter: andrei.purice, Assigned: botond)

References

(Blocks 2 open bugs)

Details

(Whiteboard: [mac:ux] )

Attachments

(1 file)

Affected Versions:
Beta 89.0b4
Nightly 90.0a1

Tested On:
MacOS 10.14 ./ 11.0.2

Steps to Reproduce:

  1. Reach https://covid19vaccine.health.ny.gov/
  2. Have the cursor placed on the orange banner to change it's state
  3. Start scrolling in order to achieve the overscroll effect
  4. Click on the blank space while in the overscroll state

Expected Results:
The overscroll effect should finish the animation and bounce back to initial state.

Actual Result:
The rubberbanding animation is stuck and is not reset until scrolling again on that site.

Notes:
Not reproducible on Safari or Chrome since the state of the cursor changes immediately once the banner is scrolled.
Severity suggested by QA is S3.

Video:
Link - https://drive.google.com/file/d/16jsZxDTwFF7_URshbhEb1urO_3y8VLnd/view?usp=sharing

I believe this is another variant of bug 1704488.

See Also: → 1704488

Andrei, I am seeing this stuck even if I click on other places other than the overscrolled gutter, e.g. left side of the "Service" item on the page. Does the problem you are seeing happens only on the gutter place? I am also wondering the "Click" in STR 4 is whether click on the touchpad or an external mouse device.

Flags: needinfo?(andrei.purice)

Hey Hiro, I can reproduce this on a MacBook Pro as well, though it's consistently harder, using the touchpad not only with a magic mouse.
Also it gets stuck on the "Service" as sell as you pointed it out.
This will happen with any interactable banner, add, etc. no matter where it's positioned.

Flags: needinfo?(andrei.purice)

Just an FYI, my track pad is set to "tap to click", but I need to perform an actual haptical click to reproduce this.

Ouh, and it can be easily replicated here in bugzilla with the top navigation above.

I don't think we will be able to fix this for 89, but we can try to get a fix into 90.

Blocks: overscroll-90
No longer blocks: overscroll-release

I can reproduce this on Linux as well.

And it doesn't even seem to be specific to this website - clicking while overscrolled seems to get the overscroll stuck in general.

What appears to be happening is:

  • We first get a pan-end, which kicks off an overscroll animation, as usual.
  • We then get a mouse-down, which cancels the animation (without clearing the overscroll) here.

Clearing the overscroll on mouse-down would break the "click on link while overscrolled" use case. Instead, we could clear the overscroll on mouse-up.

Assignee: nobody → botond
Status: NEW → ASSIGNED
See Also: → 1710544
Pushed by bballo@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/55e6a7959c56 Call SnapBackIfOverscrolled() on mouse-up. r=hiro
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch

Verified fixed on the latest Firefox Nightly 90.0a1 (2021-05-13) (20210513093303) on MacOS 10.14.6 and 11.2.3.

Hey Botond, do you guys plan to work on an uplift for this issue?

Flags: needinfo?(botond)

I think this is best left to ride the trains with 90, as the codepath that this touches is one where it's hard to be confident about all the possible consequences of a change, making it a bit risky for a late beta uplift.

Getting stuck in overscroll after a mouse-click is a behaviour that Safari has in some situations as well, so I think having this bug in 89 is fine.

Flags: needinfo?(botond)
Whiteboard: [mac:ux]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: