Bug 1707605 - Call SnapBackIfOverscrolled() on mouse-up. r=hiro

Differential Revision: https://phabricator.services.mozilla.com/D114806